--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
