--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@tabler/icons-react": "^3.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "mini-svg-data-uri": "^1.4.4",
