--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "mini-svg-data-uri": "^1.4.4",
