--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "reactstrap": "^9.2.2",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "three": "^0.163.0",
